# templatvis

./: .clang-format  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  SECURITY.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  pages.yml  release.yml
bench/: bench_vec.cpp
cmake/: Templatvis4Config.cmake.in  templatvis4.pc.in  version.hpp.in
docs/: ARCHITECTURE.md
fuzz/: fuzz_vec.cpp
include/common/: base.hpp  export.hpp
include/demo/: export.hpp  vec.hpp
include/throwers/: export.hpp  throws.hpp
scripts/: abi_diff.sh  abi_dump.sh  size_guard.sh  valgrind.sh
src/: common.cpp  main.cpp  throwers.cpp  vec.cpp
tests/: test_gtest.cpp
